--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,9 +6,9 @@
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@mipmap/ic_launcher"
+
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+
         android:supportsRtl="true"
         android:theme="@style/Theme.Espark"
         tools:targetApi="31">
@@ -23,15 +23,23 @@
             android:exported="false"
             android:parentActivityName=".ui.billHistory.BillHistory" />
         <activity
-            android:name=".MainActivity"
+            android:name=".Splash_Screen"
             android:exported="true"
-            android:label="@string/app_name"
-            android:theme="@style/Theme.Espark.NoActionBar">
+            android:theme="@style/Theme.Splash"
+            >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
+        </activity>
+        <activity
+            android:name=".MainActivity"
+            android:exported="true"
+            android:label="@string/app_name"
+            android:theme="@style/Theme.Espark.NoActionBar">
+
         </activity>
     </application>
 
